--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -13,5 +13,8 @@
     <div class="col-12">
         <p-button  styleClass="p-button-outlined w-full" label="Varas" routerLink="/varas" (click)="sibebar = false" ></p-button>
     </div>
+    <div class="col-12">
+        <p-button  styleClass="p-button-outlined w-full" label="Clientes" routerLink="/clientes" (click)="sibebar = false" ></p-button>
+    </div>
    </div>
 </p-sidebar>
