--- a/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
+++ b/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
@@ -20,7 +20,7 @@
             <app-message [control]="motivo" error="minlength"
               text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres"></app-message> -->
           </div>
-        </div>
+        </div>x'
         <div class="flex justify-content-center">
           <div class="flex align-items-center justify-content-center">
             <h6>Status</h6>
