clientes quase pronto

--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="colorNav">
     <span class="cursor-pointer">
-        <i class="pi pi-bars" (click)="sibebar = true" style="font-size: 2rem"></i>
+        <i class="pi pi-bars text-white" (click)="sibebar = true" style="font-size: 2rem"></i>
     </span>
     
 </div>
@@ -8,13 +8,22 @@
 <p-sidebar [(visible)]="sibebar">
    <div class="flex flex-wrap">
     <div class="col-12">
-        <p-button  styleClass="p-button-outlined w-full" label="Motivos" routerLink="/motivos" (click)="sibebar = false" ></p-button>
+        <p-button  styleClass="p-button-text p-button-warning w-full text-2xl" label="Motivos" routerLink="/motivos" (click)="sibebar = false" ></p-button>
     </div>
     <div class="col-12">
-        <p-button  styleClass="p-button-outlined w-full" label="Varas" routerLink="/varas" (click)="sibebar = false" ></p-button>
+        <p-button  styleClass="p-button-text p-button-warning w-full text-2xl" label="Varas" routerLink="/varas" (click)="sibebar = false" ></p-button>
     </div>
     <div class="col-12">
-        <p-button  styleClass="p-button-outlined w-full" label="Clientes" routerLink="/clientes" (click)="sibebar = false" ></p-button>
+        <p-button  styleClass="p-button-text p-button-warning w-full text-2xl" label="Status" routerLink="/status" (click)="sibebar = false" ></p-button>
+    </div>
+    <div class="col-12">
+        <p-button  styleClass="p-button-text p-button-warning w-full text-2xl" label="Clientes" routerLink="/clientes" (click)="sibebar = false" ></p-button>
+    </div>
+    <div class="col-12">
+        <p-button  styleClass="p-button-text p-button-warning w-full text-2xl" label="Agendamento" routerLink="/agendamento" (click)="sibebar = false" ></p-button>
+    </div>
+    <div class="col-12">
+        <p-button  styleClass="p-button-text p-button-warning w-full text-2xl" label="Acom Jurídico" routerLink="/acompanhamento" (click)="sibebar = false" ></p-button>
     </div>
    </div>
 </p-sidebar>
