--- a/src/app/core/layout/navbar/navbar.component.css
+++ b/src/app/core/layout/navbar/navbar.component.css
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,19 +6,14 @@
     z-index: 3;
 }
 
-/* header {
-    display: flex;
-    position: fixed;
-    width: 100%;
-    background-color: blue;
-    justify-content: center;
-    align-items: center;
-} */
-
 .colorNav {
-    margin: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     font-size: 16px;
     width: 100%;
     padding: 25px;
-    background-color: gainsboro;
+    z-index: 9999;
+    background-color: #f59e0b;
 }
